--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     Willkommen auf der Startseite!<br>
     Hier geht es zum Cookie Clicker: <a href="./Cookie/">Click me</a><br>
-    Hier geht es zu Memory: <a href="./Memory/">Click me</a>
+    Hier geht es zu Memory: <a href="./Memorie/">Click me</a>
 </body>
 </html>
